Subject : Fix image problem
Body:
Fixed the issue of images not displaying properly.
The images were inside another div which was preventing
it from covering the grid box itself.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,8 @@
 main {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding: 2rem;
-  gap: 1rem;
+  gap: 2rem;
   padding-top: 8rem;
   width: 90%;
   margin: auto;
@@ -10,7 +10,7 @@ main {
 
 .images {
   aspect-ratio: 1/1;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
@@ -22,5 +22,4 @@ main {
 
 .images:hover {
   transform: scale(1.08);
-
 }
